--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+* {
+  scroll-behavior: smooth;
+}
+
 .app {
   min-height: 100vh;
   background-color: #39445a;
@@ -6,8 +10,23 @@
   padding-bottom: 70px;
 }
 
+.pageTitle {
+  text-transform: uppercase;
+  display: flex;
+  justify-content: center;
+  font-family: "Montserrat", sans-serif;
+  font-size: 2vw;
+  padding: 4px;
+  border-radius: 50px;
+  color: white;
+}
+
 @media (max-width: 1024px) {
   .app {
     padding-top: 70px;
+  }
+
+  .pageTitle {
+    font-size: 6.4vw;
   }
 }
